# UrbanInformation

./: .env.example  .gitignore  README.md  cbsa_summary_statistics.pkl  msa_fips_data.pkl  plot_all_trajectories.py  pyproject.toml  run_cbsa_analysis_dynamic_p.py  ssm_model.py  visualize_results.py
config/: config.toml
data/figure1/: README.md  figure1A.py
data/raw/: list1_2023.csv
notes/: jordaninfo.html  jordaninfo.tex  rileynotes.md
scripts/: plot_single_cbsa.py  run_single_cbsa.py
src/data_retrieval/: acs_data_retrieval.py
src/urbaninformation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
urbandata/: LICENSE  README.md  debug_solver.py  latex3.txt  process_cbsa.py  run_cbsa_analysis_dynamic_p_hierarchical.py  ssm_model.py  temporal_autocorrelation.py  test_l_solver_standalone.py  wins_growth_correlation.py
urbandata copy/: cbsa_summary_statistics.pkl  inspect_data.py  run_cbsa_analysis_dynamic_p_parallelized_caching.py  run_parallel_analysis.py  setup.py  theory.txt
urbandata copy/analysis_output_hierarchical/: Albuquerque NM.pkl
urbandata copy/analysis_output_hierarchicalL2/: Albuquerque NM.pkl  BakersfieldDelano CA.pkl  Charlottesville VA.pkl  Columbus GAAL.pkl  Columbus MS.pkl  Detroit Lakes MN.pkl  DetroitWarrenDearborn MI.pkl  El Paso TX.pkl  Fresno CA.pkl  IndianapolisCarmelGreenwood IN.pkl  Jacksonville FL.pkl  Jacksonville NC.pkl  Las VegasHendersonNorth Las Vegas NV.pkl  MilwaukeeWaukesha WI.pkl  MinneapolisSt. PaulBloomington MNWI.pkl  Omaha NEIA.pkl  Tucson AZ.pkl  Tulsa OK.pkl  (+10 more)
visualization_scripts/: dynamic_p_utils.py
(+129 files in other folders)
